# bb2

./: .gitignore  setup.py  start.py  test_parse.py
backend/: .env.example  .gitignore  README.md  pyproject.toml  run_win.ps1
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  builtin_catalog.py  capabilities.py  errors.py  factory.py  health.py  models.py  policy.py  prompt_catalog.py  prompts.py  registry.py  result_builder.py  stream_mapping.py  trace_helpers.py
backend/app/api/: __init__.py  debug_access.py  dependencies.py  errors.py  openapi.py  request_context.py  routes_artifacts.py  routes_capabilities.py  routes_chat.py  routes_debug_control.py  routes_debug_traces.py  routes_health.py  routes_sessions.py  schemas.py  security.py  sse.py  versioning.py
backend/app/config/: __init__.py  bootstrap.py  env_resolver.py  loader.py  redaction.py  schemas.py  settings.py  validation.py  view.py
backend/app/contracts/: __init__.py  agents.py  config.py  context.py  errors.py  health.py  llm.py  memory.py  policy.py  results.py  state.py  strategies.py  tools.py  trace.py
backend/app/deployment/: __init__.py  diagnostics.py  paths.py  process_control.py  restart_helper.py  startup.py
backend/app/foundation/: __init__.py  capabilities.py  container.py  health.py
backend/app/llm/: __init__.py  errors.py  factory.py  gateway.py  health.py  models.py  profile_resolver.py  provider_base.py  provider_registry.py  redaction.py  retry.py  streaming.py  token_budget.py
backend/app/memory/: __init__.py  cli_support.py  context_builder.py  errors.py  (+6 more)
backend/config/: README.md  agents.catalog.yaml  app.yaml  messages.yaml  prompts.yaml
backend/data/: trace.db  workflow_state.db
backend/pluggable_agentic_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/runtime/: restart-request.json
backend/scripts/: README_Ingest.md  chunk_search_cli.py  markdown_folder_ingest_cli.py
frontend/: .env.example  README.md  openAPI.json  package.json  pyproject.toml  run_win.ps1  temp-test.mjs
frontend/app/: __init__.py  errors.py  main.py  settings.py
frontend/tests/: test_backend_client.py  test_frontend_js.py  test_help_content.py  test_openapi_contract.py  test_pages.py  test_proxy_routes.py  test_security_headers.py  test_settings.py  test_static_assets.py  test_visualization_phase0_contract.py
mcp/: README.md  pyproject.toml
mcp/app/: bootstrap.py  capabilities.py  config.py  context.py  errors.py  health.py  loader.py  main.py  registry.py  schemas.py  server.py
mcp/config/: app.yaml
mcp/scripts/: inspect_tools.py  run_local.sh
mcp/tools/: __init__.py
(+917 files in other folders)
