[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pluggable-agentic-ai-backend"
version = "0.1.0"
description = "Backend application tier for a pluggable agentic AI system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "httpx",
  "mcp",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "PyYAML",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
  "types-PyYAML",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
