[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "tools*"]

[project]
name = "pluggable-agentic-ai-mcp"
version = "1.0.0"
description = "Standalone MCP server for the pluggable agentic AI system."
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.0",
  "ddgs>=9.0",
  "httpx>=0.27",
  "pydantic>=2.0",
  "PyJWT[crypto]>=2.9",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "tools"]
markers = [
  "integration: tests that exercise cross-component or live integrations.",
  "external_network: tests that require outbound network access.",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
